--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Hello</title>
 </head>
 <body>
-    <h1>Código feliz!!!</h1>    
+    <h1>MARIA VAMOS ESTUDAR PROGRAMAÇÃO?</h1>
+    <h1 class="so-o-por-favor">por favor em vermelho serve?</h1>    
 </body>
 </html>
