--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -8,7 +8,8 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>MARIA VAMOS ESTUDAR PROGRAMAÇÃO?</h1>
-    <h1 class="so-o-por-favor">por favor em vermelho serve?</h1>    
+    <header>
+        <h1>Hello world!</h1>
+    </header>   
 </body>
 </html>
